--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
 <body>
     <div class="container">
         <h1>Black Jack</h1>
-        <h3 id="text-message">Want to play a round?</h3>
-        <h3 id="selected-cards">Cards: </h3>
-        <h3 id="sum">Sum: </h3>
-        <button onclick="renderGame()">Start Game</button>
-        <button onclick="newCard()">New Card</button>
-        <h4>Per: $200</h4>
+        <h3 id="message-el">Want to play a round?</h3>
+        <h3 id="cards-el">Cards: </h3>
+        <h3 id="sum-el">Sum: </h3>
+        <button onclick="renderGame()" id="disable-start-btn">Start Game</button>
+        <button onclick="newCard()" id="disable-btn">New Card</button>
+        <!-- <button onclick="replay()" id="disable-replay-btn">Replay?</button> -->
+        <h4 id="player-el"></h4>
     </div>
 </body>
 <script src="index.js"></script>
